# agentdeck

./: .gitignore  .verify.yaml  CONTRIBUTING.md  DESIGN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
deploy/: Dockerfile  agentdeck-smoke.py  agentdeck-smoke.service  agentdeck-smoke.timer  agentdeck.service  docker-compose.yml  smoke.example.env
docs/: quickstart.md
hooks/: adk.py  hook.py
server/: __main__.py  agents.py  app.py  broker.py  bus.py  claude_runner.py  config.py  credentials.py  db.py  mcp_server.py  policy.py  push.py  sandbox.py  scheduler.py  sinks.py  state.py  terminal.py  worktree.py
server/executor/: __init__.py  base.py  local.py  mock.py  pct.py  ssh.py
server/routers/: approvals.py  core.py  misc.py  tasks.py
tests/: conftest.py
tests/api/: test_approvals.py  test_bugfixes.py  test_credentials_dispatch.py  test_lifecycle.py  test_targets_projects.py  test_v02_features.py  test_v03_features.py  test_v04_swarm.py  test_v05_memory_agents.py  test_v06_ops.py  test_v07_sandbox.py  test_v08_anymodel.py
tests/e2e/: test_ui.py
tests/integration/: test_real_git.py
tests/unit/: test_agents.py  test_credentials.py  test_parser.py  test_policy.py  test_regressions.py  test_sinks.py  test_state.py  test_worktree.py
web/: app.js  index.html  manifest.webmanifest  style.css  sw.js
